--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -25,6 +25,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Pantry Tracker</title>
+
+    <!-- Custom styles here -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b57c4651d2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
+    <style>
+      /*
+      When setting the primary font stack, apply it to the Pure grid units along
+      with `html`, `button`, `input`, `select`, and `textarea`. Pure Grids use
+      specific font stacks to ensure the greatest OS/browser compatibility.
+      */
+      html, button, input, select, textarea,
+      .pure-g [class *= "pure-u"] {
+          /* Set your content font stack here: */
+          font-family: 'Roboto', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
