Items now have buttons above/below instead of left/right; removed Pure CSS library in favor of simple CSS grid layout; added FontAwesome React library

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -28,8 +28,7 @@
 
     <!-- Custom styles here -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/b57c4651d2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous"> -->
     <style>
       /*
       When setting the primary font stack, apply it to the Pure grid units along
